# HLS-CLI

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  logger.rs  main.rs  token.rs
src/aws/: mod.rs  s3Client.rs  uploadFile.rs  uploadFiles.rs
src/client/: apiClient.rs  error.rs  mod.rs  service.rs
src/commands/: cli.rs  dispatch.rs  mod.rs  run.rs
src/ffmpeg/: transcode.rs
src/model/: apiRequest.rs  apiResponse.rs  awsSessionResponse.rs  mod.rs  resolutionDetails.rs  tokenReponse.rs  tokenResponse.rs  updateVideoStatus.rs
