[package]
name = "HLS-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
keyring = "3.6.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.21.3"
ez-ffmpeg = "0.10.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
dirs = "6.0.0"
indicatif = "0.18.4"
